Added basic CRUDs for users
