# server/src/main/java/tk/artiquno/warehouse/management/authentication/dto/CreateUserDTO.java
@@ -1,12 +1,0 @@
-package tk.artiquno.warehouse.management.authentication.dto;
-
-import lombok.Data;
-
-import java.util.List;
-
-@Data
-public class CreateUserDTO {
-    private String username;
-    private String password;
-    private List<String> roles;
-}
