# server/src/main/java/tk/artiquno/warehouse/management/authentication/dto/SuccessfulAuthenticationDTO.java
@@ -1,11 +1,0 @@
-package tk.artiquno.warehouse.management.authentication.dto;
-
-import lombok.Data;
-
-import java.util.List;
-
-@Data
-public class SuccessfulAuthenticationDTO {
-    private String username;
-    private List<String> roles;
-}
