# server/src/main/java/tk/artiquno/warehouse/management/authentication/services/UserService.java
@@ -1,16 +1,52 @@
 package tk.artiquno.warehouse.management.authentication.services;
 
 import tk.artiquno.warehouse.management.authentication.User;
-import tk.artiquno.warehouse.management.authentication.dto.CreateUserDTO;
+import tk.artiquno.warehouse.management.swagger.dto.UserCredentialsDTO;
+import tk.artiquno.warehouse.management.swagger.dto.UserDTO;
 
 import java.util.List;
 
 public interface UserService {
+    // TODO: Add filters and pagination
+    List<UserDTO> getAllUsers();
+
+    /**
+     * Finds the user with the given id. If can't find it
+     * it throws an exception
+     * @param id The id to search for
+     * @return The user
+     *
+     * @throws javax.persistence.EntityNotFoundException if a user with the
+     * given id can not be found
+     */
+    UserDTO getUserById(long id);
+
+    /**
+     * Finds the user with the given username
+     * @param username The username to look for
+     * @return The user
+     *
+     * @throws javax.persistence.EntityNotFoundException if a user with the
+     * given username can not be found
+     */
     User getUserByUsername(String username);
 
-    void createUser(CreateUserDTO userInfo);
+    /**
+     * Creates a user with the given credentials
+     *
+     * @param userCredentials The credentials to use for the new user
+     * @return The created user
+     * @throws tk.artiquno.warehouse.management.authentication.UsernameExistsException if another user with the given username already exists
+     */
+    UserDTO createUser(UserCredentialsDTO userCredentials);
 
     List<String> getRolesByUsername(String username);
+
+    /**
+     * Soft-deletes a user
+     * @param id The id of the user to remove
+     */
+    void removeUser(long id);
 
     /**
      * Creates a default admin user *if* there are no other users in the db
@@ -19,4 +55,14 @@ public interface UserService {
      * a user already exists in the database
      */
     void createDefaultUser();
+
+    /**
+     * Update a user's information
+     * @param user The user's updated information
+     * @return The updated user
+     *
+     * @throws javax.persistence.EntityNotFoundException if a user
+     * with the given id does not exist
+     */
+    UserDTO updateUser(UserDTO user);
 }
