# server/src/main/java/tk/artiquno/warehouse/management/authentication/services/UserServiceImpl.java
@@ -1,5 +1,6 @@
 package tk.artiquno.warehouse.management.authentication.services;
 
+import org.springframework.beans.BeanUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Service;
@@ -8,15 +9,24 @@ import tk.artiquno.warehouse.management.authentication.User;
 import tk.artiquno.warehouse.management.authentication.UserRepo;
 import tk.artiquno.warehouse.management.authentication.UsernameExistsException;
 import tk.artiquno.warehouse.management.authentication.configurations.SecurityProperties;
-import tk.artiquno.warehouse.management.authentication.dto.CreateUserDTO;
+import tk.artiquno.warehouse.management.authentication.mappers.UserCredentialsMapper;
+import tk.artiquno.warehouse.management.authentication.mappers.UserMapper;
 import tk.artiquno.warehouse.management.exceptions.ForbiddenException;
+import tk.artiquno.warehouse.management.swagger.dto.UserCredentialsDTO;
+import tk.artiquno.warehouse.management.swagger.dto.UserDTO;
 
 import javax.persistence.EntityNotFoundException;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.StreamSupport;
 
 @Service
 public class UserServiceImpl implements UserService {
+    @Autowired
+    private UserCredentialsMapper userCredentialsMapper;
+    @Autowired
+    private UserMapper userMapper;
+
     @Autowired
     private UserRepo userRepo;
 
@@ -27,23 +37,37 @@ public class UserServiceImpl implements UserService {
     private SecurityProperties securityProperties;
 
     @Override
+    public List<UserDTO> getAllUsers() {
+        return StreamSupport.stream(userRepo.findAll().spliterator(), false)
+                .map(userMapper::toUserDTO)
+                .toList();
+    }
+
+    @Override
+    public UserDTO getUserById(long id) {
+        User user = userRepo.findById(id)
+                .orElseThrow(EntityNotFoundException::new);
+        return userMapper.toUserDTO(user);
+    }
+
+    @Override
     public User getUserByUsername(String username) {
         return userRepo.findByUsername(username)
                 .orElseThrow(EntityNotFoundException::new);
     }
 
     @Override
-    public void createUser(CreateUserDTO userInfo) {
-        Optional<User> existingUser = userRepo.findByUsername(userInfo.getUsername());
+    public UserDTO createUser(UserCredentialsDTO userCredentials) {
+        Optional<User> existingUser = userRepo.findByUsername(userCredentials.getUsername());
         if(existingUser.isPresent()) {
             throw new UsernameExistsException("A user with this username already exists");
         }
 
-        User user = new User();
-        user.setUsername(userInfo.getUsername());
-        user.setPassword(passwordEncoder.encode(userInfo.getPassword()));
-        user.setRoles(userInfo.getRoles());
-        userRepo.save(user);
+        User user = userCredentialsMapper.toUser(userCredentials);
+        user.setPassword(passwordEncoder.encode(userCredentials.getPassword()));
+        user = userRepo.save(user);
+
+        return userMapper.toUserDTO(user);
     }
 
     @Transactional
@@ -52,9 +76,34 @@ public class UserServiceImpl implements UserService {
         User user = getUserByUsername(username);
         // The bad .stream().toList() is needed since we have lazy loading
         // and we *have* to load the roles before we exit the method otherwise
-        // we will get LazyInitializationException (because then the transaction/session is closed?)
+        // we will get LazyInitializationException (because then the
+        // transaction/session is closed?)
         return user.getRoles().stream()
                 .toList();
+    }
+
+    @Override
+    public UserDTO updateUser(UserDTO user) {
+        User existingUser = userRepo.findById(user.getId())
+                .orElseThrow(EntityNotFoundException::new);
+
+        BeanUtils.copyProperties(user, existingUser);
+
+        existingUser = userRepo.save(existingUser);
+        return userMapper.toUserDTO(existingUser);
+    }
+
+    @Override
+    public void removeUser(long id) {
+        User user = userRepo.findById(id)
+                .orElse(null);
+        if(user == null)
+        {
+            return;
+        }
+
+        user.setActive(false);
+        userRepo.save(user);
     }
 
     @Override
@@ -65,10 +114,7 @@ public class UserServiceImpl implements UserService {
             throw new ForbiddenException("A user already exists");
         }
 
-        CreateUserDTO user = new CreateUserDTO();
-        user.setUsername(securityProperties.getDefaultUser().getUsername());
-        user.setPassword(securityProperties.getDefaultUser().getPassword());
-        user.setRoles(securityProperties.getDefaultUser().getRoles());
+        UserCredentialsDTO user = userCredentialsMapper.toUserCredentials(securityProperties.getDefaultUser());
         createUser(user);
     }
 }
